--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-asgiref==3.3.4
+asgiref==3.3.1
 astroid==2.5.2
 boto3==1.16.63
 botocore==1.19.63
 cryptography==3.4.6
 dj-database-url==0.5.0
-Django==3.2
+Django==3.1.7
 django-allauth==0.44.0
 django-countries==7.0
 django-crispy-forms==1.10.0
@@ -15,6 +15,7 @@ oauthlib==3.1.0
 Pillow==8.1.2
 psycopg2-binary==2.8.6
 PyJWT==2.0.0
+pylint==2.7.4
 python3-openid==3.2.0
 pytz==2020.5
 requests-oauthlib==1.3.0
